@@ -5,14 +5,19 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.net.MalformedURLException;
 import java.net.UnknownHostException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Locale;
 import java.util.Properties;
 
 import net.i2p.I2PAppContext;
 import net.i2p.I2PException;
+import net.i2p.client.I2PSession;
+import net.i2p.client.I2PSessionException;
+import net.i2p.data.Base32;
 import net.i2p.data.DataHelper;
 import net.i2p.data.Destination;
+import net.i2p.data.Hash;
 import net.i2p.util.EepGet;
 import net.i2p.util.SocketTimeout;
 
@@ -108,9 +113,11 @@ public class I2PSocketEepGet extends EepGet {
         if (_socket != null) try { _socket.close(); } catch (IOException ioe) {}
 
         try {
-            URL url = new URL(_actualURL);
-            if ("http".equals(url.getProtocol())) {
+            URI url = new URI(_actualURL);
+            if ("http".equals(url.getScheme())) {
                 String host = url.getHost();
+                if (host == null)
+                    throw new MalformedURLException("no hostname: " + _actualURL);
                 int port = url.getPort();
                 if (port <= 0 || port > 65535)
                     port = 80;
@@ -119,19 +126,44 @@ public class I2PSocketEepGet extends EepGet {
                 // Rewrite the url to strip out the /i2p/,
                 // as the naming service accepts B64KEY (but not B64KEY.i2p atm)
                 if ("i2p".equals(host)) {
-                    String file = url.getFile();
+                    String file = url.getRawPath();
                     try {
                         int slash = 1 + file.substring(1).indexOf("/");
                         host = file.substring(1, slash);
                         _actualURL = "http://" + host + file.substring(slash);
+                        String query = url.getRawQuery();
+                        if (query != null)
+                            _actualURL = _actualURL + '?' + query;
                     } catch (IndexOutOfBoundsException ioobe) {
-                        throw new IOException("Bad /i2p/ format: " + _actualURL);
+                        throw new MalformedURLException("Bad /i2p/ format: " + _actualURL);
                     }
                 }
 
-                Destination dest = _context.namingService().lookup(host);
+                // Use existing I2PSession for lookups.
+                // This is much more efficient than using the naming service
+                Destination dest;
+                I2PSession sess = _socketManager.getSession();
+                if (sess != null && !sess.isClosed()) {
+                    try {
+                        if (host.length() == 60 && host.endsWith(".b32.i2p")) {
+                            byte[] b = Base32.decode(host.substring(0, 52));
+                            if (b != null) {
+                                Hash h = Hash.create(b);
+                                dest = sess.lookupDest(h, 20*1000);
+                            } else {
+                                dest = null;
+                            }
+                        } else {
+                            dest = sess.lookupDest(host, 20*1000);
+                        }
+                    } catch (I2PSessionException ise) {
+                        dest = null;
+                    }
+                } else {
+                    dest = _context.namingService().lookup(host);
+                }
                 if (dest == null)
-                    throw new UnknownHostException("Unknown or non-i2p host");
+                    throw new UnknownHostException("Unknown or non-i2p host: " + host);
 
                 // Set the timeouts, using the other existing options in the socket manager
                 // This currently duplicates what SocketTimeout is doing in EepGet,
@@ -147,12 +179,14 @@ public class I2PSocketEepGet extends EepGet {
                 opts.setPort(port);
                 _socket = _socketManager.connect(dest, opts);
             } else {
-                throw new IOException("Unsupported protocol: " + _actualURL);
+                throw new MalformedURLException("Unsupported protocol: " + _actualURL);
             }
-        } catch (MalformedURLException mue) {
-            throw new IOException("Request URL is invalid: " + _actualURL);
+        } catch (URISyntaxException use) {
+            IOException ioe = new MalformedURLException("Bad URL");
+            ioe.initCause(use);
+            throw ioe;
         } catch (I2PException ie) {
-            throw new IOException(ie.toString());
+            throw new IOException("I2P error", ie);
         }
 
         _proxyIn = _socket.getInputStream();
@@ -176,10 +210,17 @@ public class I2PSocketEepGet extends EepGet {
     @Override
     protected String getRequest() throws IOException {
         StringBuilder buf = new StringBuilder(2048);
-        URL url = new URL(_actualURL);
+        URI url;
+        try {
+            url = new URI(_actualURL);
+        } catch (URISyntaxException use) {
+            IOException ioe = new MalformedURLException("Bad URL");
+            ioe.initCause(use);
+            throw ioe;
+        }
         //String host = url.getHost();
-        String path = url.getPath();
-        String query = url.getQuery();
+        String path = url.getRawPath();
+        String query = url.getRawQuery();
         if (query != null)
             path = path + '?' + query;
         if (!path.startsWith("/"))
@@ -206,6 +247,8 @@ public class I2PSocketEepGet extends EepGet {
         if(!uaOverridden)
             buf.append("User-Agent: " + USER_AGENT + "\r\n");
         buf.append("\r\n");
+        if (_log.shouldDebug())
+            _log.debug("Request: [" + buf.toString() + "]");
         return buf.toString();
     }
 
@@ -238,7 +281,7 @@ public class I2PSocketEepGet extends EepGet {
                     url = args[i];
                 }
             }
-        } catch (Exception e) {
+        } catch (RuntimeException e) {
             e.printStackTrace();
             usage();
             return;
