@@ -44,15 +44,21 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.io.PipedInputStream;
 import java.io.PipedOutputStream;
+import java.net.InetSocketAddress;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.security.KeyStore;
 import java.security.GeneralSecurityException;
 import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
+import java.util.Arrays;
 import java.util.Locale;
 import javax.net.ssl.SSLContext;
-import javax.net.ssl.SSLHandshakeException;
+import javax.net.ssl.SSLEngine;
+import javax.net.ssl.SSLException;
+import javax.net.ssl.SSLParameters;
+import javax.net.ssl.SSLSocket;
 import javax.net.ssl.SSLSocketFactory;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.TrustManagerFactory;
@@ -78,7 +84,9 @@ import net.i2p.data.DataHelper;
  */
 public class SSLEepGet extends EepGet {
     /** if true, save cert chain on cert error */
-    private boolean _saveCerts;
+    private int _saveCerts;
+    /** if true, don't do hostname verification */
+    private boolean _bypassVerification;
     /** true if called from main(), used for logging */
     private boolean _commandLine;
     /** may be null if init failed */
@@ -149,15 +157,20 @@ public class SSLEepGet extends EepGet {
      * SSLEepGet -s https://foo/bar
      */ 
     public static void main(String args[]) {
-        boolean saveCerts = false;
+        int saveCerts = 0;
+        boolean noVerify = false;
         boolean error = false;
-        Getopt g = new Getopt("ssleepget", args, "s");
+        Getopt g = new Getopt("ssleepget", args, "sz");
         try {
             int c;
             while ((c = g.getopt()) != -1) {
               switch (c) {
                 case 's':
-                    saveCerts = true;
+                    saveCerts++;
+                    break;
+
+                case 'z':
+                    noVerify = true;
                     break;
 
                 case '?':
@@ -167,7 +180,7 @@ public class SSLEepGet extends EepGet {
                     break;
               }  // switch
             } // while
-        } catch (Exception e) {
+        } catch (RuntimeException e) {
             e.printStackTrace();
             error = true;
         }
@@ -189,8 +202,10 @@ public class SSLEepGet extends EepGet {
         }
 
         SSLEepGet get = new SSLEepGet(I2PAppContext.getGlobalContext(), out, url);
-        if (saveCerts)
-            get._saveCerts = true;
+        if (saveCerts > 0)
+            get._saveCerts = saveCerts;
+        if (noVerify)
+            get._bypassVerification = true;
         get._commandLine = true;
         get.addStatusListener(get.new CLIStatusListener(1024, 40));
         if(!get.fetch(45*1000, -1, 60*1000))
@@ -198,8 +213,10 @@ public class SSLEepGet extends EepGet {
     }
     
     private static void usage() {
-        System.err.println("Usage: SSLEepGet https://url\n" +
-                           "To save unknown certs, use: SSLEepGet -s https://url");
+        System.err.println("Usage: SSLEepGet [-sz] https://url\n" +
+                           "  -s save unknown certs\n" +
+                           "  -s -s save all certs\n" +
+                           "  -z bypass hostname verification");
     }
 
     /**
@@ -254,6 +271,50 @@ public class SSLEepGet extends EepGet {
             X509TrustManager defaultTrustManager = (X509TrustManager)tmf.getTrustManagers()[0];
             _stm = new SavingTrustManager(defaultTrustManager);
             sslc.init(null, new TrustManager[] {_stm}, null);
+            if (_log.shouldLog(Log.DEBUG)) {
+                SSLEngine eng = sslc.createSSLEngine();
+                SSLParameters params = sslc.getDefaultSSLParameters();
+                String[] s = eng.getSupportedProtocols();
+                Arrays.sort(s);
+                _log.debug("Supported protocols: " + s.length);
+                for (int i = 0; i < s.length; i++) {
+                     _log.debug(s[i]);
+                }
+                s = eng.getEnabledProtocols();
+                Arrays.sort(s);
+                _log.debug("Enabled protocols: " + s.length);
+                for (int i = 0; i < s.length; i++) {
+                     _log.debug(s[i]);
+                }
+                s = params.getProtocols();
+                if (s == null)
+                    s = new String[0];
+                _log.debug("Default protocols: " + s.length);
+                Arrays.sort(s);
+                for (int i = 0; i < s.length; i++) {
+                     _log.debug(s[i]);
+                }
+                s = eng.getSupportedCipherSuites();
+                Arrays.sort(s);
+                _log.debug("Supported ciphers: " + s.length);
+                for (int i = 0; i < s.length; i++) {
+                     _log.debug(s[i]);
+                }
+                s = eng.getEnabledCipherSuites();
+                Arrays.sort(s);
+                _log.debug("Enabled ciphers: " + s.length);
+                for (int i = 0; i < s.length; i++) {
+                     _log.debug(s[i]);
+                }
+                s = params.getCipherSuites();
+                if (s == null)
+                    s = new String[0];
+                _log.debug("Default ciphers: " + s.length);
+                Arrays.sort(s);
+                for (int i = 0; i < s.length; i++) {
+                     _log.debug(s[i]);
+                }
+            }
             return sslc;
         } catch (GeneralSecurityException gse) {
             _log.error("Key Store update error", gse);
@@ -303,19 +364,18 @@ public class SSLEepGet extends EepGet {
         for (int k = 0; k < chain.length; k++) {
             X509Certificate cert = chain[k];
             String name = host + '-' + (k + 1) + ".crt";
-            System.out.println("NOTE: Saving untrusted X509 certificate as " + name);
+            System.out.println("NOTE: Saving X509 certificate as " + name);
             System.out.println("      Issuer:     " + cert.getIssuerX500Principal());
             System.out.println("      Valid From: " + cert.getNotBefore());
             System.out.println("      Valid To:   " + cert.getNotAfter());
             try {
                 cert.checkValidity();
-            } catch (Exception e) {
+            } catch (GeneralSecurityException e) {
                 System.out.println("      WARNING: Certificate is not currently valid, it cannot be used");
             }
             CertUtil.saveCert(cert, new File(name));
         }
         System.out.println("NOTE: To trust them, copy the certificate file(s) to the certificates directory and rerun without the -s option");
-        System.out.println("NOTE: EepGet failed, certificate error follows:");
     }
 
     /**
@@ -361,6 +421,10 @@ public class SSLEepGet extends EepGet {
             else
                 timeout.setInactivityTimeout(60*1000);
         }        
+        if (_fetchInactivityTimeout > 0)
+            _proxy.setSoTimeout(_fetchInactivityTimeout);
+        else
+            _proxy.setSoTimeout(INACTIVITY_TIMEOUT);
 
         if (_redirectLocation != null) {
             throw new IOException("Server redirect to " + _redirectLocation + " not allowed");
@@ -490,28 +554,49 @@ public class SSLEepGet extends EepGet {
 
         String req = getRequest();
 
-        //try {
-            URL url = new URL(_actualURL);
-            String host = null;
-            int port = 0;
-            if ("https".equals(url.getProtocol())) {
+        String host;
+        int port;
+        try {
+            URI url = new URI(_actualURL);
+            if ("https".equals(url.getScheme())) {
                 host = url.getHost();
+                if (host == null)
+                    throw new MalformedURLException("Bad URL");
                 if (host.toLowerCase(Locale.US).endsWith(".i2p"))
                     throw new MalformedURLException("I2P addresses unsupported");
                 port = url.getPort();
                 if (port == -1)
                     port = 443;
+                // Warning, createSocket() followed by connect(InetSocketAddress)
+                // disables SNI, at least on Java 7.
+                // So we must do createSocket(host, port) and then setSoTimeout;
+                // we can't crate a disconnected socket and then call setSoTimeout, sadly.
                 if (_sslContext != null)
                     _proxy = _sslContext.getSocketFactory().createSocket(host, port);
                 else
                     _proxy = SSLSocketFactory.getDefault().createSocket(host, port);
+                if (_fetchHeaderTimeout > 0) {
+                    _proxy.setSoTimeout(_fetchHeaderTimeout);
+                }
+                SSLSocket socket = (SSLSocket) _proxy;
+                I2PSSLSocketFactory.setProtocolsAndCiphers(socket);
+                if (!_bypassVerification) {
+                    try {
+                        I2PSSLSocketFactory.verifyHostname(_context, socket, host);
+                    } catch (SSLException ssle) {
+                        if (_saveCerts > 0 && _stm != null)
+                            saveCerts(host, _stm);
+                        throw ssle;
+                    }
+                }
             } else {
                 throw new MalformedURLException("Only https supported: " + _actualURL);
             }
-        // an MUE is an IOE
-        //} catch (MalformedURLException mue) {
-        //    throw new IOException("Request URL is invalid");
-        //}
+        } catch (URISyntaxException use) {
+            IOException ioe = new MalformedURLException("Redirected to invalid URL");
+            ioe.initCause(use);
+            throw ioe;
+        }
 
         _proxyIn = _proxy.getInputStream();
         _proxyOut = _proxy.getOutputStream();
@@ -520,12 +605,14 @@ public class SSLEepGet extends EepGet {
         try {
             _proxyOut.write(DataHelper.getUTF8(req));
             _proxyOut.flush();
-        } catch (SSLHandshakeException sslhe) {
+            if (_saveCerts > 1 && _stm != null)
+                saveCerts(host, _stm);
+        } catch (SSLException sslhe) {
             // this maybe would be better done in the catch in super.fetch(), but
             // then we'd have to copy it all over here.
             _log.error("SSL negotiation error with " + host + ':' + port +
                        " - self-signed certificate or untrusted certificate authority?", sslhe);
-            if (_saveCerts && _stm != null)
+            if (_saveCerts > 0 && _stm != null)
                 saveCerts(host, _stm);
             else if (_commandLine) {
                 System.out.println("FAILED (probably due to untrusted certificates) - Run with -s option to save certificates");
